<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c100">
    <LinearLayout
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="3dp"
            android:background="@drawable/stork_gray">
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:src="@drawable/menu"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/search"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c300"
            android:layout_below="@id/toolbarMain"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/Main_Linear_Darkhastha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/Main_Imageview_Darkhastha"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/darkhasthaman"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/darkhasthaman"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Main_Linear_Dasteha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/Main_Imageview_Dasteha"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/Dasteha"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dasteha"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Main_Linear_Safheasli"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/Main_Imageview_Safheasli"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/SafheAsli"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SafheAsli"/>
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c300"
        android:layout_below="@id/toolbarMain"
        />

    <FrameLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarMain" />

    <FrameLayout
        android:id="@+id/ContainerFull"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</RelativeLayout>